# tmsi

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
examples/: example_lsl.py
src/tmsi/: __init__.py
src/tmsi/TMSiFileFormats/: __init__.py  file_writer.py
src/tmsi/TMSiFileFormats/file_formats/: __init__.py  lsl_stream_writer.py  mne_lsl_writer.py  poly5_file_writer.py  poly5_to_edf_converter.py  xdf_file_writer.py
src/tmsi/TMSiFileFormats/file_readers/: __init__.py  edf_reader.py  poly5reader.py  xdf_reader.py
src/tmsi/TMSiSDK/: __init__.py  tmsi_sdk.py
src/tmsi/TMSiSDK/device/: __init__.py  tmsi_channel.py  tmsi_device.py  tmsi_device_enums.py  tmsi_dongle.py  tmsi_event_reader.py  tmsi_impedance_channel.py  tmsi_measurement.py  tmsi_thread.py
src/tmsi/TMSiSDK/device/devices/apex/: apex_API.py  apex_API_enums.py  apex_API_structures.py  apex_device.py  apex_dongle.py  apex_event_reader.py
src/tmsi/TMSiSDK/device/devices/apex/apex_structures/: apex_channel.py  apex_config.py  apex_const.py  apex_impedance_channel.py  apex_info.py  dongle_info.py
src/tmsi/TMSiSDK/device/devices/apex/measurements/: download_measurement.py  impedance_measurement.py  signal_measurement.py
src/tmsi/TMSiSDK/device/devices/saga/: saga_API.py  saga_API_enums.py  saga_API_structures.py  saga_device.py
src/tmsi/TMSiSDK/device/devices/saga/measurements/: download_measurement.py  impedance_measurement.py  signal_measurement.py
src/tmsi/TMSiSDK/device/devices/saga/saga_structures/: saga_channel.py  saga_config.py  saga_const.py  saga_info.py  saga_sensor.py
src/tmsi/TMSiSDK/sample_data_server/: __init__.py  event_data.py  sample_data.py  sample_data_server.py
src/tmsi/TMSiSDK/tmsi_errors/: error.py
src/tmsi/TMSiSDK/tmsi_resources/: EEGchannelsTMSi.txt  HD_EMG_grid_channel_configuration.json
src/tmsi/TMSiSDK/tmsi_utilities/: decorators.py  logger_filter.py  mask_type.py  singleton.py  support_functions.py  tmsi_logger.py
src/tmsi/TMSiSDK/tmsi_utilities/apex/: apex_structure_generator.py
src/tmsi/TMSiSDK/tmsi_utilities/saga/: saga_structure_generator.py
tests/: test_info.py  test_reshape.py
